# FIT

BIT1-AZIM/IEL/: IEL.tex
BIT1-AZIM/IZP/Projekt1-Prace_s_textem/: README.md  proj1.c
BIT1-AZIM/IZP/Projekt3-Jednoducha_shlukova_analyza/: README.md  proj3.c
BIT1-AZIM/IZP/projekt2-iteracni_vypocty/: README.md  proj2.c
BIT1-LET/INC/PristupovyTerminal/: README.md  fsm.vhd
BIT1-LET/IOS/Projekt1/: dirgraph  proj1.patch
BIT1-LET/IOS/Projekt2/: Makefile  README.md  main.c
BIT1-LET/IZG/: student_cpu.c  student_pipeline.c  student_shader.c
BIT2-AZIM/IAL/: c016.c  c202.c  c204.c  c206.c  c401.c  c402.c
BIT2-AZIM/INP/projekt2/: cpu.vhd  inp.srp  login.b
BIT2-AZIM/ITU/ITUproject/: ITUproject.sln
BIT2-LET/IDS/: xberna16_xchmel28.sql
BIT2-LET/IJA-1/: README.md  build.xml
BIT2-LET/IJA-1/doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-tree.html  package-list
BIT2-LET/IPK/: Makefile  main.cpp  readme.txt
BIT2-LET/IPP/: interpret.py  parse.php  test.php
BIT2-LET/IPP/tests/: 1.in  1.out  1.src  10.in  10.out  10.src  11.in  11.out  11.src  12.in  12.out  12.src  13.in  13.out  13.src  (+34 more)
BIT3-AZIM/IIS/: README.md  doc.html  manage.py
BIT3-AZIM/IMP/: README.md  xberna16.tex
BIT3-AZIM/ISA/: Makefile  README  README.md  myripresponse.cpp  myripsniffer.cpp
BIT3-AZIM/ISS/: README.md  bonus.py  bonusout.txt  output.txt  xberna16.m
BIT4-AZIM/ISA/: DNSPacket.cpp  DNSPacket.h  Makefile  README  main.cpp
BIT4-AZIM/ISA/tests/: CMakeLists.txt  test.cpp  test.h
(+191 files in other folders)
